--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -56,3 +56,4 @@ hermesEnabled=true
 # The build will continue, but you are strongly encouraged to update your project to
 # use a newer Android Gradle Plugin that has been tested with compileSdk = 34
 android.suppressUnsupportedCompileSdk=34
+android.ndk.suppressMinSdkVersionError=21
