--- a/app.json
+++ b/app.json
@@ -4,7 +4,9 @@
   "expo": {
     "scheme": "heliumwallet",
     "plugins": [
-      "@maplibre/maplibre-react-native"
+      "@maplibre/maplibre-react-native",
+      "expo-asset",
+      "expo-secure-store"
     ]
   }
 }
