Undo a bunch of expo stuff

--- a/app.json
+++ b/app.json
@@ -4,9 +4,7 @@
   "expo": {
     "scheme": "heliumwallet",
     "plugins": [
-      "@maplibre/maplibre-react-native",
-      "expo-asset",
-      "expo-secure-store"
+      "@maplibre/maplibre-react-native"
     ]
   }
 }
