--- a/package.json
+++ b/package.json
@@ -71,13 +71,13 @@
     "@metaplex-foundation/mpl-token-metadata": "2.10.0",
     "@ngraveio/bc-ur": "^1.1.13",
     "@onsol/tldparser": "^0.5.3",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "1.18.1",
     "@react-native-community/blur": "4.4.1",
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
-    "@react-native-community/netinfo": "11.4.1",
-    "@react-native-community/slider": "4.5.5",
+    "@react-native-community/netinfo": "9.3.7",
+    "@react-native-community/slider": "^4.5.2",
     "@react-navigation/bottom-tabs": "6.4.0",
     "@react-navigation/material-top-tabs": "6.5.1",
     "@react-navigation/native": "6.0.11",
@@ -126,15 +126,15 @@
     "ed25519-hd-key": "^1.3.0",
     "events": "3.3.0",
     "expo": "52.0.44",
-    "expo-asset": "~11.0.5",
+    "expo-asset": "10.0.10",
     "expo-barcode-scanner": "13.0.1",
     "expo-camera": "16.0.18",
-    "expo-constants": "~17.0.8",
-    "expo-haptics": "~14.0.1",
+    "expo-constants": "16.0.2",
+    "expo-haptics": "13.0.1",
     "expo-linking": "7.0.5",
-    "expo-local-authentication": "~15.0.2",
-    "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.22",
+    "expo-local-authentication": "14.0.1",
+    "expo-secure-store": "13.0.2",
+    "expo-splash-screen": "0.27.5",
     "fuse.js": "6.6.2",
     "h3-js": "4.1.0",
     "https-browserify": "0.0.1",
@@ -142,7 +142,7 @@
     "lodash": "4.17.21",
     "long": "5.2.0",
     "lottie-ios": "^4.5.1",
-    "lottie-react-native": "7.1.0",
+    "lottie-react-native": "^7.2.2",
     "markdown-it": "^13.0.2",
     "metro-react-native-babel-transformer": "^0.77.0",
     "parse5": "6.0.1",
@@ -156,7 +156,7 @@
     "react-async-hook": "^4.0.0",
     "react-error-boundary": "^4.0.13",
     "react-i18next": "11.18.4",
-    "react-native": "0.76.9",
+    "react-native": "0.77.2",
     "react-native-appstate-hook": "1.0.6",
     "react-native-ble-plx": "3.5.0",
     "react-native-charts-wrapper": "0.5.10",
@@ -164,8 +164,8 @@
     "react-native-crypto": "2.2.0",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-get-random-values": "~1.11.0",
+    "react-native-gesture-handler": "2.25.0",
+    "react-native-get-random-values": "1.8.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
@@ -178,19 +178,19 @@
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "5.2.9",
     "react-native-os": "^1.2.6",
-    "react-native-pager-view": "6.5.1",
+    "react-native-pager-view": "6.7.0",
     "react-native-permissions": "^5.3.0",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "3.17.3",
+    "react-native-safe-area-context": "5.3.0",
+    "react-native-screens": "4.10.0",
     "react-native-share": "7.9.0",
     "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
     "react-native-sodium": "^0.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "15.10.1",
     "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
     "react-native-test-flight": "1.1.0",
@@ -198,7 +198,7 @@
     "react-native-udp": "2.7.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-video": "6.12.0",
-    "react-native-webview": "13.12.5",
+    "react-native-webview": "13.13.5",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
@@ -223,7 +223,7 @@
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
     "@ledgerhq/hw-transport-mocker": "6.27.2",
-    "@react-native-community/cli": "15.0.1",
+    "@react-native-community/cli": "^18.0.0",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
     "@react-native/babel-preset": "0.77.2",
@@ -239,7 +239,7 @@
     "@types/markdown-it": "^13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
-    "@types/react": "~18.3.12",
+    "@types/react": "^19.0.0",
     "@types/react-native": "0.70.6",
     "@types/react-native-charts-wrapper": "0.5.2",
     "@types/react-native-shared-group-preferences": "1.1.1",
@@ -263,6 +263,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
+    "expo-modules-autolinking": "^2.0.8",
     "husky": "7.0.4",
     "jest": "^29.6.3",
     "jetifier": "1.6.8",
@@ -275,7 +276,7 @@
     "reactotron-react-native": "5.0.3",
     "reactotron-redux": "3.1.3",
     "rn-nodeify": "10.3.0",
-    "typescript": "^5.3.3"
+    "typescript": "5.0.4"
   },
   "resolutions": {
     "@types/react": "18",
