--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -34,7 +34,7 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # your application. You should enable this flag either if you want
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
-newArchEnabled=false
+newArchEnabled=true
 
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
@@ -44,15 +44,16 @@ hermesEnabled=true
 # updates: https://github.com/facebook/react-native/issues/36974#issuecomment-1516829016.
 # Update to SDK 34 but supress error message for now as builds will continue
 # to work.
-#
+# 
 # WARNING:We recommend using a newer Android Gradle plugin to use compileSdk = 34
-#
+# 
 # This Android Gradle plugin (7.4.1) was tested up to compileSdk = 33
-#
+# 
 # This warning can be suppressed by adding
-#     android.suppressUnsupportedCompileSdk=34
+# android.suppressUnsupportedCompileSdk=34
 # to this project's gradle.properties
-#
+# 
 # The build will continue, but you are strongly encouraged to update your project to
 # use a newer Android Gradle Plugin that has been tested with compileSdk = 34
 android.suppressUnsupportedCompileSdk=34
+android.ndk.suppressMinSdkVersionError=21
