--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@3.6.4",
   "dependencies": {
     "@babel/preset-typescript": "7.21.0",
     "@bonfida/spl-name-service": "^1.1.1",
     "@coral-xyz/anchor": "^0.31.0",
-    "@gorhom/bottom-sheet": "4.6.0",
+    "@gorhom/bottom-sheet": "5.1.2",
     "@gorhom/portal": "1.0.14",
     "@helium/account-fetch-cache": "0.10.6",
     "@helium/account-fetch-cache-hooks": "0.10.6",
@@ -73,7 +72,7 @@
     "@ngraveio/bc-ur": "^1.1.13",
     "@onsol/tldparser": "^0.5.3",
     "@react-native-async-storage/async-storage": "1.18.1",
-    "@react-native-community/blur": "4.3.0",
+    "@react-native-community/blur": "4.4.1",
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
@@ -126,13 +125,12 @@
     "domain-browser": "1.2.0",
     "ed25519-hd-key": "^1.3.0",
     "events": "3.3.0",
-    "expo": "51.0.24",
+    "expo": "52.0.44",
     "expo-asset": "10.0.10",
-    "expo-barcode-scanner": "13.0.1",
-    "expo-camera": "15.0.14",
+    "expo-camera": "16.0.18",
     "expo-constants": "16.0.2",
     "expo-haptics": "13.0.1",
-    "expo-linking": "6.3.1",
+    "expo-linking": "7.0.5",
     "expo-local-authentication": "14.0.1",
     "expo-secure-store": "13.0.2",
     "expo-splash-screen": "0.27.5",
@@ -142,8 +140,8 @@
     "i18next": "21.9.1",
     "lodash": "4.17.21",
     "long": "5.2.0",
-    "lottie-ios": "^4.4.1",
-    "lottie-react-native": "^6.7.0",
+    "lottie-ios": "^4.5.1",
+    "lottie-react-native": "^7.2.2",
     "markdown-it": "^13.0.2",
     "metro-react-native-babel-transformer": "^0.77.0",
     "parse5": "6.0.1",
@@ -153,19 +151,19 @@
     "qs": "6.11.0",
     "query-string": "7.1.1",
     "querystring-es3": "0.2.1",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-async-hook": "^4.0.0",
     "react-error-boundary": "^4.0.13",
     "react-i18next": "11.18.4",
-    "react-native": "0.74.5",
+    "react-native": "0.77.2",
     "react-native-appstate-hook": "1.0.6",
-    "react-native-ble-plx": "2.0.3",
+    "react-native-ble-plx": "3.5.0",
     "react-native-charts-wrapper": "0.5.10",
     "react-native-config": "1.4.6",
     "react-native-crypto": "2.2.0",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "2.18.1",
+    "react-native-gesture-handler": "2.24.0",
     "react-native-get-random-values": "1.8.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
@@ -177,29 +175,29 @@
     "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-navigation-bar-color": "2.0.2",
     "react-native-network-info": "5.2.1",
-    "react-native-onesignal": "5.2.2",
+    "react-native-onesignal": "5.2.9",
     "react-native-os": "^1.2.6",
-    "react-native-pager-view": "6.1.2",
-    "react-native-permissions": "^3.9.0",
+    "react-native-pager-view": "6.7.0",
+    "react-native-permissions": "^5.3.0",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "3.14.0",
-    "react-native-safe-area-context": "4.10.8",
-    "react-native-screens": "3.34.0",
+    "react-native-reanimated": "3.17.3",
+    "react-native-safe-area-context": "5.3.0",
+    "react-native-screens": "4.10.0",
     "react-native-share": "7.9.0",
     "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
     "react-native-sodium": "^0.4.0",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "15.10.1",
     "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
     "react-native-test-flight": "1.1.0",
     "react-native-text-ticker": "1.14.0",
     "react-native-udp": "2.7.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-video": "5.2.1",
-    "react-native-webview": "13.10.5",
+    "react-native-video": "6.12.0",
+    "react-native-webview": "13.13.5",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
@@ -220,29 +218,33 @@
     "vm-browserify": "0.0.4"
   },
   "devDependencies": {
-    "@babel/core": "7.20.12",
-    "@babel/preset-env": "7.20.2",
-    "@babel/runtime": "7.20.13",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/runtime": "^7.25.0",
     "@ledgerhq/hw-transport-mocker": "6.27.2",
-    "@react-native/babel-preset": "0.74.87",
-    "@react-native/eslint-config": "0.74.87",
-    "@react-native/metro-config": "0.74.87",
-    "@react-native/typescript-config": "0.74.87",
+    "@react-native-community/cli": "^16.0.0",
+    "@react-native-community/cli-platform-android": "15.0.1",
+    "@react-native-community/cli-platform-ios": "15.0.1",
+    "@react-native/babel-preset": "0.77.2",
+    "@react-native/eslint-config": "0.77.2",
+    "@react-native/metro-config": "0.77.2",
+    "@react-native/typescript-config": "0.77.2",
     "@types/bn.js": "5.1.1",
     "@types/debounce": "^1.2.4",
     "@types/i18n-js": "3.8.2",
+    "@types/jest": "^29.5.13",
     "@types/lodash": "4.14.183",
     "@types/mapbox__geo-viewport": "^0.5.3",
     "@types/markdown-it": "^13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
-    "@types/react": "^18.2.6",
+    "@types/react": "^19.0.0",
     "@types/react-native": "0.70.6",
     "@types/react-native-charts-wrapper": "0.5.2",
     "@types/react-native-shared-group-preferences": "1.1.1",
     "@types/react-native-snap-carousel": "3.8.5",
     "@types/react-native-video": "5.0.14",
-    "@types/react-test-renderer": "17.0.2",
+    "@types/react-test-renderer": "^19.0.0",
     "@types/semver": "7.3.12",
     "@types/tinycolor2": "1.4.3",
     "@typescript-eslint/eslint-plugin": "5.59.2",
@@ -260,6 +262,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
+    "expo-modules-autolinking": "^2.0.8",
     "husky": "7.0.4",
     "jest": "^29.6.3",
     "jetifier": "1.6.8",
@@ -268,7 +271,7 @@
     "react-native-cli-bump-version": "1.5.0",
     "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "0.14.3",
-    "react-test-renderer": "17.0.2",
+    "react-test-renderer": "18.3.1",
     "reactotron-react-native": "5.0.3",
     "reactotron-redux": "3.1.3",
     "rn-nodeify": "10.3.0",
@@ -276,7 +279,7 @@
   },
   "resolutions": {
     "@types/react": "18",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "@solana/wallet-adapter-react": "0.15.33",
     "@helium/account-fetch-cache": "0.10.6",
     "@helium/account-fetch-cache-hooks": "0.10.6",
