--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@helium/account-fetch-cache-hooks": "0.10.6",
     "@helium/address": "4.10.2",
     "@helium/circuit-breaker-sdk": "0.10.6",
+    "@helium/cron-sdk": "^0.0.8",
     "@helium/crypto-react-native": "4.8.0",
     "@helium/currency-utils": "0.10.6",
     "@helium/data-credits-sdk": "0.10.6",
@@ -42,6 +43,7 @@
     "@helium/helium-entity-manager-sdk": "0.10.6",
     "@helium/helium-react-hooks": "0.10.6",
     "@helium/helium-sub-daos-sdk": "0.10.6",
+    "@helium/hpl-crons-sdk": "^0.10.6",
     "@helium/http": "4.7.5",
     "@helium/idls": "0.10.6",
     "@helium/lazy-distributor-sdk": "0.10.6",
@@ -57,6 +59,7 @@
     "@helium/sus": "0.10.6",
     "@helium/transactions": "4.8.1",
     "@helium/treasury-management-sdk": "0.10.6",
+    "@helium/tuktuk-sdk": "^0.0.8",
     "@helium/voter-stake-registry-hooks": "0.10.6",
     "@helium/voter-stake-registry-sdk": "0.10.6",
     "@helium/wallet-link": "4.11.0",
