Attempt to fix android by adding expo config

--- a/app.json
+++ b/app.json
@@ -4,7 +4,15 @@
   "expo": {
     "scheme": "heliumwallet",
     "plugins": [
-      "@maplibre/maplibre-react-native"
+      "@maplibre/maplibre-react-native",
+      [
+        "react-native-ble-plx",
+        {
+          "isBackgroundEnabled": true,
+          "modes": ["peripheral", "central"],
+          "bluetoothAlwaysPermission": "Allow $(PRODUCT_NAME) to connect to bluetooth devices"
+        }
+      ]
     ]
   }
 }
