--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,8 @@
 pluginManagement {
-    includeBuild(new File(["node", "--print", "require.resolve('@react-native/gradle-plugin/package.json', { paths: [require.resolve('react-native/package.json')] })"].execute(null, rootDir).text.trim()).getParentFile().toString())
+  repositories {
+    maven { url "https://plugins.gradle.org/m2/" }
+  }
+  includeBuild("../node_modules/@react-native/gradle-plugin") 
 }
 plugins { id("com.facebook.react.settings") }
 
