--- a/package.json
+++ b/package.json
@@ -72,7 +72,6 @@
     "@ngraveio/bc-ur": "1.1.13",
     "@onsol/tldparser": "0.5.3",
     "@react-native-async-storage/async-storage": "1.18.1",
-    "@react-native-community/blur": "4.4.1",
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
@@ -127,6 +126,7 @@
     "events": "3.3.0",
     "expo": "52.0.44",
     "expo-asset": "10.0.10",
+    "expo-blur": "~14.0.3",
     "expo-camera": "16.0.18",
     "expo-constants": "16.0.2",
     "expo-haptics": "13.0.1",
