--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,6 +13,8 @@ node_require('expo/scripts/autolinking.rb')
 
 setup_permissions(['BluetoothPeripheral', 'LocationAlways', 'LocationWhenInUse'])
 
+ENV['RCT_NEW_ARCH_ENABLED'] = "1"
+
 platform :ios, '15.1'
 prepare_react_native_project!
 
