--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
     "events": "3.3.0",
     "expo": "52.0.44",
     "expo-asset": "10.0.10",
-    "expo-blur": "~14.0.3",
+    "expo-blur": "14.0.3",
     "expo-camera": "16.0.18",
     "expo-constants": "16.0.2",
     "expo-haptics": "13.0.1",
