--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@helium/account-fetch-cache": "0.10.11",
     "@helium/account-fetch-cache-hooks": "0.10.11",
     "@helium/address": "4.10.2",
-    "@helium/automation-hooks": "^0.10.11",
+    "@helium/automation-hooks": "file:.yalc/@helium/automation-hooks",
     "@helium/circuit-breaker-sdk": "0.10.11",
     "@helium/cron-sdk": "^0.0.8",
     "@helium/crypto-react-native": "4.8.0",
@@ -43,7 +43,7 @@
     "@helium/fanout-sdk": "0.10.11",
     "@helium/helium-entity-manager-sdk": "0.10.11",
     "@helium/helium-react-hooks": "0.10.11",
-    "@helium/helium-sub-daos-sdk": "0.10.11",
+    "@helium/helium-sub-daos-sdk": "file:.yalc/@helium/helium-sub-daos-sdk",
     "@helium/hpl-crons-sdk": "^0.10.11",
     "@helium/http": "4.7.5",
     "@helium/idls": "0.10.11",
@@ -62,8 +62,8 @@
     "@helium/treasury-management-sdk": "0.10.11",
     "@helium/tuktuk-idls": "^0.0.8",
     "@helium/tuktuk-sdk": "^0.0.8",
-    "@helium/voter-stake-registry-hooks": "0.10.11",
-    "@helium/voter-stake-registry-sdk": "0.10.11",
+    "@helium/voter-stake-registry-hooks": "file:.yalc/@helium/voter-stake-registry-hooks",
+    "@helium/voter-stake-registry-sdk": "file:.yalc/@helium/voter-stake-registry-sdk",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "6.0.6",
     "@keystonehq/keystone-sdk": "0.8.0",
