--- a/package.json
+++ b/package.json
@@ -30,40 +30,40 @@
     "@coral-xyz/anchor": "0.31.0",
     "@gorhom/bottom-sheet": "5.1.2",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "0.10.17",
-    "@helium/account-fetch-cache-hooks": "0.10.17",
+    "@helium/account-fetch-cache": "0.10.21",
+    "@helium/account-fetch-cache-hooks": "0.10.21",
     "@helium/address": "4.10.2",
-    "@helium/automation-hooks": "^0.10.17",
-    "@helium/circuit-breaker-sdk": "0.10.17",
+    "@helium/automation-hooks": "^0.10.21",
+    "@helium/circuit-breaker-sdk": "0.10.21",
     "@helium/cron-sdk": "^0.0.8",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency-utils": "0.10.17",
-    "@helium/data-credits-sdk": "0.10.17",
-    "@helium/distributor-oracle": "0.10.17",
-    "@helium/fanout-sdk": "0.10.17",
-    "@helium/helium-entity-manager-sdk": "0.10.17",
-    "@helium/helium-react-hooks": "0.10.17",
-    "@helium/helium-sub-daos-sdk": "0.10.17",
-    "@helium/hpl-crons-sdk": "^0.10.17",
+    "@helium/currency-utils": "0.10.21",
+    "@helium/data-credits-sdk": "0.10.21",
+    "@helium/distributor-oracle": "0.10.21",
+    "@helium/fanout-sdk": "0.10.21",
+    "@helium/helium-entity-manager-sdk": "0.10.21",
+    "@helium/helium-react-hooks": "0.10.21",
+    "@helium/helium-sub-daos-sdk": "0.10.21",
+    "@helium/hpl-crons-sdk": "^0.10.21",
     "@helium/http": "4.7.5",
-    "@helium/idls": "0.10.17",
-    "@helium/lazy-distributor-sdk": "0.10.17",
+    "@helium/idls": "0.10.21",
+    "@helium/lazy-distributor-sdk": "0.10.21",
     "@helium/modular-governance-hooks": "0.1.5",
     "@helium/modular-governance-idls": "0.1.5",
-    "@helium/no-emit-sdk": "0.10.17",
+    "@helium/no-emit-sdk": "0.10.21",
     "@helium/onboarding": "4.14.0",
     "@helium/organization-sdk": "0.1.5",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "3.1.0",
-    "@helium/spl-utils": "0.10.17",
+    "@helium/spl-utils": "0.10.21",
     "@helium/state-controller-sdk": "0.1.5",
-    "@helium/sus": "0.10.17",
+    "@helium/sus": "0.10.21",
     "@helium/transactions": "4.8.1",
-    "@helium/treasury-management-sdk": "0.10.17",
+    "@helium/treasury-management-sdk": "0.10.21",
     "@helium/tuktuk-idls": "^0.0.8",
     "@helium/tuktuk-sdk": "^0.0.8",
-    "@helium/voter-stake-registry-hooks": "0.10.17",
-    "@helium/voter-stake-registry-sdk": "0.10.17",
+    "@helium/voter-stake-registry-hooks": "0.10.21",
+    "@helium/voter-stake-registry-sdk": "0.10.21",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "6.0.6",
     "@keystonehq/keystone-sdk": "0.8.0",
@@ -287,11 +287,11 @@
     "@types/react": "18",
     "react": "18.3.1",
     "@solana/wallet-adapter-react": "0.15.33",
-    "@helium/account-fetch-cache": "0.10.17",
-    "@helium/account-fetch-cache-hooks": "0.10.17",
-    "@helium/helium-react-hooks": "0.10.17",
-    "@helium/voter-stake-registry-hooks": "0.10.17",
-    "@helium/voter-stake-registry-sdk": "0.10.17",
+    "@helium/account-fetch-cache": "0.10.21",
+    "@helium/account-fetch-cache-hooks": "0.10.21",
+    "@helium/helium-react-hooks": "0.10.21",
+    "@helium/voter-stake-registry-hooks": "0.10.21",
+    "@helium/voter-stake-registry-sdk": "0.10.21",
     "@helium/modular-governance-hooks": "0.1.5",
     "@helium/onboarding": "4.14.0"
   },
@@ -346,5 +346,6 @@
     "tty": "tty-browserify",
     "vm": "vm-browserify",
     "zlib": "browserify-zlib"
-  }
+  },
+  "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
 }
