--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "@gorhom/portal": "1.0.14",
     "@helium/account-fetch-cache": "0.10.25",
     "@helium/account-fetch-cache-hooks": "0.10.25",
-    "@helium/address": "4.10.2",
+    "@helium/address": "^5.0.0-alpha.1",
     "@helium/automation-hooks": "^0.10.25",
     "@helium/circuit-breaker-sdk": "0.10.25",
     "@helium/cron-sdk": "^0.0.8",
-    "@helium/crypto-react-native": "4.8.0",
+    "@helium/crypto-react-native": "^5.0.0-alpha.1",
     "@helium/currency-utils": "0.10.25",
     "@helium/data-credits-sdk": "0.10.25",
     "@helium/distributor-oracle": "0.10.25",
@@ -45,26 +45,26 @@
     "@helium/helium-react-hooks": "0.10.25",
     "@helium/helium-sub-daos-sdk": "0.10.25",
     "@helium/hpl-crons-sdk": "^0.10.25",
-    "@helium/http": "4.7.5",
+    "@helium/http": "^5.0.0-alpha.1",
     "@helium/idls": "0.10.25",
     "@helium/lazy-distributor-sdk": "0.10.25",
     "@helium/modular-governance-hooks": "0.1.5",
     "@helium/modular-governance-idls": "0.1.5",
     "@helium/no-emit-sdk": "0.10.25",
-    "@helium/onboarding": "4.14.0",
+    "@helium/onboarding": "^5.0.0-alpha.1",
     "@helium/organization-sdk": "0.1.5",
-    "@helium/proto-ble": "4.0.0",
-    "@helium/react-native-sdk": "3.1.0",
+    "@helium/proto-ble": "^5.0.0-alpha.1",
+    "@helium/react-native-sdk": "file:.yalc/@helium/react-native-sdk",
     "@helium/spl-utils": "0.10.25",
     "@helium/state-controller-sdk": "0.1.5",
     "@helium/sus": "0.10.25",
-    "@helium/transactions": "4.8.1",
+    "@helium/transactions": "^5.0.0-alpha.1",
     "@helium/treasury-management-sdk": "0.10.25",
     "@helium/tuktuk-idls": "^0.0.8",
     "@helium/tuktuk-sdk": "^0.0.8",
     "@helium/voter-stake-registry-hooks": "0.10.25",
     "@helium/voter-stake-registry-sdk": "0.10.25",
-    "@helium/wallet-link": "4.11.0",
+    "@helium/wallet-link": "^5.0.0-alpha.1",
     "@jup-ag/api": "6.0.6",
     "@keystonehq/keystone-sdk": "0.8.0",
     "@ledgerhq/hw-app-solana": "7.4.0",
@@ -136,11 +136,10 @@
     "expo-asset": "10.0.10",
     "expo-blur": "14.0.3",
     "expo-camera": "16.0.18",
-    "expo-constants": "16.0.2",
+    "expo-constants": "17.1.7",
     "expo-haptics": "13.0.1",
     "expo-linking": "7.0.5",
     "expo-local-authentication": "14.0.1",
-    "expo-modules-core": "2.2.3",
     "expo-secure-store": "13.0.2",
     "expo-splash-screen": "0.27.5",
     "fuse.js": "6.6.2",
@@ -205,7 +204,7 @@
     "react-native-udp": "2.7.0",
     "react-native-url-polyfill": "2.0.0",
     "react-native-video": "6.12.0",
-    "react-native-webview": "13.13.5",
+    "react-native-webview": "13.15.0",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
@@ -293,7 +292,7 @@
     "@helium/voter-stake-registry-hooks": "0.10.25",
     "@helium/voter-stake-registry-sdk": "0.10.25",
     "@helium/modular-governance-hooks": "0.1.5",
-    "@helium/onboarding": "4.14.0"
+    "@helium/onboarding": "^5.0.0-alpha.1"
   },
   "react-native": {
     "zlib": "browserify-zlib",
