Feat/drop sodium (#940)
* hail mary

* update patch

* undo some things

* fix patch

* fix patch

* tweaks

* tweak patch

* remove

* remove instances of sodium

* please work

* tweaks

* tweaks

* stash

* built on pre relase 16kb

* aplha packages

* bump version to 2.15.0 using noble packages over sodium

* downgrade version

* package bump

* unneeded changes

* fix lint issue

* dep updates

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "helium-wallet",
-  "version": "2.14.3",
+  "version": "2.14.4",
   "private": true,
   "scripts": {
     "postinstall": "patch-package && ./node_modules/.bin/rn-nodeify --hack --install && npx jetify",
@@ -32,11 +32,11 @@
     "@gorhom/portal": "1.0.14",
     "@helium/account-fetch-cache": "0.10.26",
     "@helium/account-fetch-cache-hooks": "0.10.26",
-    "@helium/address": "4.10.2",
+    "@helium/address": "^5.0.0",
     "@helium/automation-hooks": "^0.10.26",
     "@helium/circuit-breaker-sdk": "0.10.26",
     "@helium/cron-sdk": "^0.0.8",
-    "@helium/crypto-react-native": "4.8.0",
+    "@helium/crypto-react-native": "^5.0.0",
     "@helium/currency-utils": "0.10.26",
     "@helium/data-credits-sdk": "0.10.26",
     "@helium/distributor-oracle": "0.10.26",
@@ -45,26 +45,26 @@
     "@helium/helium-react-hooks": "0.10.26",
     "@helium/helium-sub-daos-sdk": "0.10.26",
     "@helium/hpl-crons-sdk": "^0.10.26",
-    "@helium/http": "4.7.5",
+    "@helium/http": "^5.0.0",
     "@helium/idls": "0.10.26",
     "@helium/lazy-distributor-sdk": "0.10.26",
     "@helium/modular-governance-hooks": "0.1.5",
     "@helium/modular-governance-idls": "0.1.5",
     "@helium/no-emit-sdk": "0.10.26",
-    "@helium/onboarding": "4.14.0",
+    "@helium/onboarding": "^5.0.0",
     "@helium/organization-sdk": "0.1.5",
-    "@helium/proto-ble": "4.0.0",
-    "@helium/react-native-sdk": "3.1.0",
+    "@helium/proto-ble": "^5.0.0",
+    "@helium/react-native-sdk": "^4.0.1",
     "@helium/spl-utils": "0.10.26",
     "@helium/state-controller-sdk": "0.1.5",
     "@helium/sus": "0.10.26",
-    "@helium/transactions": "4.8.1",
+    "@helium/transactions": "^5.0.0",
     "@helium/treasury-management-sdk": "0.10.26",
     "@helium/tuktuk-idls": "^0.0.8",
     "@helium/tuktuk-sdk": "^0.0.8",
     "@helium/voter-stake-registry-hooks": "0.10.26",
     "@helium/voter-stake-registry-sdk": "0.10.26",
-    "@helium/wallet-link": "4.11.0",
+    "@helium/wallet-link": "^5.0.0",
     "@jup-ag/api": "6.0.6",
     "@keystonehq/keystone-sdk": "0.8.0",
     "@ledgerhq/hw-app-solana": "7.4.0",
@@ -75,6 +75,8 @@
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "2.10.0",
     "@ngraveio/bc-ur": "1.1.13",
+    "@noble/ciphers": "^1.3.0",
+    "@noble/ed25519": "^2.3.0",
     "@noble/hashes": "^1.8.0",
     "@onsol/tldparser": "0.5.3",
     "@react-native-async-storage/async-storage": "1.18.1",
@@ -134,7 +136,7 @@
     "expo-asset": "10.0.10",
     "expo-blur": "14.0.3",
     "expo-camera": "16.0.18",
-    "expo-constants": "16.0.2",
+    "expo-constants": "17.0.6",
     "expo-haptics": "13.0.1",
     "expo-linking": "7.0.5",
     "expo-local-authentication": "14.0.1",
@@ -195,7 +197,6 @@
     "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-sodium": "0.4.0",
     "react-native-svg": "15.11.2",
     "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
@@ -219,7 +220,6 @@
     "timers-browserify": "1.4.2",
     "tinycolor2": "1.4.2",
     "tty-browserify": "0.0.0",
-    "tweetnacl": "1.0.3",
     "url": "0.10.3",
     "use-debounce": "7.0.1",
     "vm-browserify": "0.0.4"
@@ -293,7 +293,7 @@
     "@helium/voter-stake-registry-hooks": "0.10.26",
     "@helium/voter-stake-registry-sdk": "0.10.26",
     "@helium/modular-governance-hooks": "0.1.5",
-    "@helium/onboarding": "4.14.0"
+    "@helium/onboarding": "^5.0.0"
   },
   "react-native": {
     "zlib": "browserify-zlib",
