--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "@noble/ed25519": "^2.3.0",
     "@noble/hashes": "^1.8.0",
     "@onsol/tldparser": "0.5.3",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-clipboard/clipboard": "^1.16.0",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-native-community/hooks": "^100.1.0",
@@ -132,17 +132,18 @@
     "domain-browser": "1.2.0",
     "ed25519-hd-key": "1.3.0",
     "events": "3.3.0",
-    "expo": "52.0.44",
-    "expo-asset": "10.0.10",
-    "expo-blur": "14.0.3",
-    "expo-camera": "16.0.18",
-    "expo-constants": "17.0.6",
-    "expo-haptics": "13.0.1",
-    "expo-linking": "7.0.5",
-    "expo-local-authentication": "14.0.1",
-    "expo-modules-core": "2.2.3",
-    "expo-secure-store": "13.0.2",
-    "expo-splash-screen": "0.27.5",
+    "expo": "53.0.19",
+    "expo-asset": "~11.1.7",
+    "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.11",
+    "expo-constants": "~17.1.7",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.7",
+    "expo-local-authentication": "~16.0.5",
+    "expo-modules-autolinking": "~2.1.14",
+    "expo-modules-core": "~2.5.0",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.10",
     "fuse.js": "6.6.2",
     "h3-js": "4.1.0",
     "https-browserify": "0.0.1",
@@ -164,7 +165,7 @@
     "react-async-hook": "4.0.0",
     "react-error-boundary": "4.0.13",
     "react-i18next": "11.18.4",
-    "react-native": "0.80.0",
+    "react-native": "0.79.5",
     "react-native-appstate-hook": "1.0.6",
     "react-native-ble-plx": "3.4.0",
     "react-native-charts-wrapper": "0.5.10",
@@ -172,8 +173,8 @@
     "react-native-crypto": "2.2.0",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "^2.26.0",
-    "react-native-get-random-values": "1.8.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
@@ -186,18 +187,18 @@
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "5.2.9",
     "react-native-os": "1.2.6",
-    "react-native-pager-view": "6.7.0",
+    "react-native-pager-view": "6.7.1",
     "react-native-permissions": "5.3.0",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "^3.18.0",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.11.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-share": "7.9.0",
     "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.11.2",
     "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
     "react-native-test-flight": "1.1.0",
@@ -205,7 +206,7 @@
     "react-native-udp": "2.7.0",
     "react-native-url-polyfill": "2.0.0",
     "react-native-video": "6.12.0",
-    "react-native-webview": "^13.14.1",
+    "react-native-webview": "13.13.5",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
@@ -245,7 +246,7 @@
     "@types/markdown-it": "13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
-    "@types/react": "^19.1.0",
+    "@types/react": "~19.0.10",
     "@types/react-native-charts-wrapper": "0.5.2",
     "@types/react-native-shared-group-preferences": "1.1.1",
     "@types/react-native-snap-carousel": "3.8.5",
@@ -280,11 +281,11 @@
     "reactotron-react-native": "5.0.3",
     "reactotron-redux": "3.1.3",
     "rn-nodeify": "10.3.0",
-    "typescript": "5.0.4"
+    "typescript": "~5.8.3"
   },
   "resolutions": {
-    "@types/react": "18",
-    "react": "18.3.1",
+    "@types/react": "19",
+    "react": "19.1.0",
     "@solana/wallet-adapter-react": "0.15.33",
     "@helium/account-fetch-cache": "0.10.30",
     "@helium/account-fetch-cache-hooks": "0.10.30",
